<resources>
    <string name="app_name">Android Exercise Submission</string>
    <string name="section_one">AppBar/ActionBar/ToolBar</string>
    <string name="section_two">RecyclerView</string>
    <string name="section_three">NavigationDrawer</string>
    <string name="section_four">BottomNavigation</string>
    <string name="section_five">TabLayout</string>
    <string name="section_six">JSON API &amp; Retrofit</string>
    <string name="section_seven">ViewModel</string>
    <string name="section_eight">SharedPreference</string>
    <string name="section_nine">Animation</string>
    <string name="section_ten">Brain Trainer App</string>
    <string name="section_eleven">Room</string>
    <string name="section_twelve">AlarmManager</string>
    <string name="section_thirteen">WorkManager</string>
    <string name="feature_info">*Red color indicate the feature is not implemented</string>
    <string name="title_activity_custom_bottom_navigation_bar">CustomBottomNavigationBarActivity
    </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profiles">Profile</string>
    <string name="title_activity_custom_tab_layout">CustomTabLayout</string>
    <string name="tab_text_1">Communities</string>
    <string name="tab_text_2">Chats</string>
    <string name="tab_text_3">Groups</string>
    <string name="tab_text_4">Status</string>
    <string name="tab_text_5">Calls</string>
    <string name="title_activity_custom_navigation_drawer">CustomNavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about">About</string>
</resources>