<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/featureInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/feature_info"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/featureInfoTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionOneMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/section_one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionTwoMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/feature_not_implemented"
                android:text="@string/section_two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionThreeMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/section_three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionFourMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/section_four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionFiveMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"             android:text="@string/section_five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionSixMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/section_six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionSevenMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/section_seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionEightMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/feature_not_implemented"
                android:text="@string/section_eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionNineMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/feature_not_implemented"
                android:text="@string/section_nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionTenMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/feature_not_implemented"
                android:text="@string/section_ten" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionElevenMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/feature_not_implemented"
                android:text="@string/section_eleven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionTwelveMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/feature_not_implemented"
                android:text="@string/section_twelve" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sectionThirteenMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="128dp"
                android:backgroundTint="@color/feature_not_implemented"
                android:text="@string/section_thirteen" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>